--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-dj-database-url==0.4.1
-Django==1.10.1
-gunicorn==19.6.0
-httplib2==0.9.2
-oauth2==1.9.0.post1
-Pillow==3.3.1
-pytz==2016.6.1
+-r default-requirements.txt
+-r heroku-requirements.txt
